kubernetes/apps/kubevirt/cdi/resources/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: cdi-uploadproxy
spec:
  hostnames:
    - cdi.${SECRET_DOMAIN}
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: internal
      namespace: envoy-system
      sectionName: https
  rules:
    - backendRefs:
      - group: gateway.envoyproxy.io
        kind: Backend
        name: cdi-uploadproxy
        namespace: network
        port: 443
      matches:
        - path:
            type: PathPrefix
            value: /
